# ABERP-Editions

./: .gitignore  Cargo.toml  README.md  SAW-OFF.md  audit.toml  deny.toml
apps/aberp/: Cargo.toml
apps/aberp-ui/: Cargo.toml  tauri.conf.json
apps/aberp-ui/icons/: icon.icns  icons.icns
apps/aberp-ui/src/: backend.rs  commands.rs  handshake.rs  lib.rs
apps/aberp-ui/tests/: handshake_parse.rs
apps/aberp-ui/ui/: index.html  package-lock.json  package.json  vite.config.ts
apps/aberp-ui/ui/src/: App.svelte
apps/aberp-ui/ui/static/: .gitignore
apps/aberp/src/: ap_sync.rs  audit_payloads.rs  audit_query.rs  audit_rebuild.rs  audit_summary.rs  avl_vendors.rs  binary_hash.rs  branding_config.rs  build_profile.rs  cad_blob.rs  catalogue_push.rs  cli.rs  daemon_tick_guard.rs  drain_pending_retries.rs  drain_submission_queue.rs  email_invoice.rs  email_outbox_poll_daemon.rs  email_relay_daemon.rs  email_relay_queue.rs  export_invoice_bundle.rs  first_launch.rs  fs.rs  incoming_invoices.rs  invoice_bank_snapshot.rs  invoice_currency_metadata.rs  invoice_draft.rs  issue_invoice.rs  issue_modification.rs  issue_preflight.rs  issue_storno.rs  lib.rs  live_checkpoint.rs  main.rs  margin_profiles.rs  mark_abandoned.rs  mark_invoice_paid.rs  material_inventory.rs  material_traceability.rs  mes_boot.rs  mes_manager.rs  (+54 more)
apps/aberp/tests/: adr0098_r7_backfill_refork.rs  avl_vendors_route.rs  boot_crash_recovery_e2e.rs  cad_blob_audit_e2e.rs  chain_currency_match.rs  edition_db_isolation.rs  edition_snapshot_isolation.rs  email_outbox_poll_full_cycle.rs  email_outbox_poll_s311_stale_recovery.rs  email_recipient_override.rs  export_invoice_bundle_smoke.rs  heat_lot_gate.rs  issue_invoice_eur_offline.rs  issue_modification_xml_round_trip.rs  issue_storno_xml_round_trip.rs  mark_abandoned_live.rs  mnb_no_nested_runtime.rs  nav_credentials_blob.rs  nav_xml_eur_body.rs  nav_xml_notes_never_leak.rs  nav_xml_payment_method.rs  nav_xml_summary_multibucket.rs  nav_xml_unit_of_measure.rs  nav_xsd_validator_round_trip.rs  ncr_capa_gate.rs  observe_receiver_confirmation_live.rs  part_uid_gate.rs  poll_ack_live.rs  poll_annulment_ack_live.rs  portable_demo_boot_e2e.rs  pr_84_invoice_dates.rs  print_invoice_render.rs  purchase_order_e2e.rs  qc_inspection_gate.rs  quoting_machines_route.rs  request_technical_annulment_xml_round_trip.rs  retry_submission_live.rs  rollback_conformance.rs  s335_email_outbox_audit_write_coherence.rs  s335_email_outbox_throttle.rs  (+31 more)
crates/aberp-db/: Cargo.toml
crates/aberp-db/src/: debounce.rs  lib.rs
crates/aberp-db/tests/: adr0099_snapshot_quote_intake_seq_fork.rs  handle_concurrency_e2e.rs
crates/aberp-digital-id/: Cargo.toml
crates/aberp-digital-id/src/: cac.rs  identity.rs  lib.rs  mock.rs  provider.rs  signature.rs  tests.rs
crates/aberp-dispatch/: Cargo.toml
crates/aberp-dispatch/migrations/: V001__dispatch.sql
crates/aberp-dispatch/src/: audit.rs  error.rs  lib.rs  repository.rs  state.rs  types.rs
crates/aberp-dispatch/tests/: dispatch_round_trip.rs
crates/aberp-inventory/: Cargo.toml
crates/aberp-inventory/migrations/: V001__inventory.sql
crates/aberp-inventory/src/: audit.rs  error.rs  lib.rs  repository.rs  types.rs
crates/aberp-inventory/tests/: repository_round_trip.rs
crates/aberp-mes/: Cargo.toml  README.md
crates/aberp-mes/src/: adapter.rs  audit.rs  error.rs  events.rs  ledger_writer.rs  lib.rs  noop.rs  registry.rs
crates/aberp-mes/src/adapters/: mod.rs  mtconnect.rs
crates/aberp-qa/: Cargo.toml
crates/aberp-qa/migrations/: V001__qa.sql
crates/aberp-qa/src/: audit.rs  error.rs  lib.rs  repository.rs  state.rs  types.rs
crates/aberp-qa/tests/: qa_round_trip.rs
crates/aberp-quote-engine/: Cargo.toml
crates/aberp-quote-engine/src/: breakdown.rs  capacity.rs  catalogue.rs  engine.rs  error.rs  feature_graph.rs  lib.rs
crates/aberp-quote-engine/tests/: benchmark.rs  branches.rs  capacity.rs  catalogue_snapshot.rs  determinism.rs  feature_graph_compat.rs  gear_ops.rs  golden.rs  machine_rates.rs  planetary_box_validation.rs  property.rs  real_part_gearspinner60_validation.rs  stock_form.rs  tolerance_cost.rs  tolerance_taxonomy.rs  tolerance_validation.rs  validation.rs
crates/aberp-quote-intake/: Cargo.toml  README.md
crates/aberp-quote-intake/src/: audit.rs  config.rs  error.rs  lib.rs  log_table.rs  mapping.rs  payload.rs  service.rs  transport.rs
crates/aberp-quote-intake/tests/: mock_server_round_trip.rs
crates/aberp-snapshot/: Cargo.toml
crates/aberp-snapshot/src/: crash_safe.rs  lib.rs  recover.rs  retention.rs  store.rs  take.rs
crates/aberp-snapshot/tests/: crash_safe_checkpoint_tests.rs  edition_isolation_tests.rs  recover_engine_tests.rs  snapshot_tests.rs
crates/aberp-verify/: Cargo.toml
crates/aberp-verify/src/: bundle.rs  lib.rs  main.rs  report.rs  verify.rs
crates/aberp-work-orders/: Cargo.toml
crates/aberp-work-orders/src/: error.rs  lib.rs  repository.rs  state.rs  types.rs
crates/aberp-work-orders/tests/: work_order_round_trip.rs
crates/audit-ledger/: Cargo.toml
crates/audit-ledger/src/: canonical.rs  error.rs  lib.rs  mirror.rs  signer.rs
crates/audit-ledger/tests/: chain_conformance.rs  s341_concurrent_append.rs
crates/invoice-pdf/: Cargo.toml
crates/invoice-pdf/examples/: render_samples.rs
crates/invoice-pdf/src/: format.rs  lib.rs  logo.rs  model.rs  text.rs
crates/mnb-rates/: Cargo.toml
crates/mnb-rates/src/: error.rs  lib.rs  parse.rs  soap.rs
crates/mnb-rates/tests/: fixture_parse.rs
crates/nav-transport/: Cargo.toml
crates/nav-transport/src/: cipher.rs  error.rs  lib.rs  signatures.rs
crates/nav-transport/tests/: soap_golden.rs  token_exchange_live.rs
modules/billing/: Cargo.toml
modules/billing/src/: api.rs  lib.rs
modules/billing/tests/: annual_reset.rs  idempotency_key_round_trip.rs  migration_pr73_old_schema.rs  notes_migration.rs  s392_sequence_floor.rs  sequence_allocator.rs
python/aberp-cad-extract/: pyproject.toml
python/aberp-cad-extract/aberp_cad_extract/: __init__.py  __main__.py  cli.py  feature_graph.py  heuristics.py
(+396 files in other folders)
