# ABERP workspace.
#
# Members:
#   crates/audit-ledger    - tamper-evident hash-chained audit ledger (ADR-0008).
#   crates/nav-transport   - NAV TLS transport + credential loading (ADR-0009 §4,
#                            ADR-0020 §1-3, ADR-0021 §A14). PR-7-A.
#   modules/billing        - NAV invoice issuing module (ADR-0009).
#   apps/aberp             - the CLI binary that wires modules together.
#
# Dependency pins below come from ADR-0021 (pre-code consolidated baseline).
# Cargo.lock is the load-bearing artifact per ADR-0007 section "Supply chain";
# the version lines here are the floor, Cargo.lock is the exact pin.
#
# Only crates actually exercised by a landed PR appear here. Crates pinned
# by ADR-0021 but not yet used (axum, axum-server, rcgen) are added when
# the first PR that uses them lands. This matches CLAUDE.md rule 2
# (simplicity first) without losing the pins, which remain authoritative
# in ADR-0021 Part A. (sha3 + aes joined the catalogue in PR-7-B-1; the
# remaining axum / axum-server / rcgen wait for the wire-protocol PR.)

[workspace]
resolver = "2"
members = [
    "crates/audit-ledger",
    "crates/nav-transport",
    "modules/billing",
    "apps/aberp",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
# Effective MSRV floor: bumped from 1.85 to 1.88 when PR-3 pulled in
# `time` 0.3.47 (requires 1.88) and `icu_*` 2.2 (requires 1.86) via the
# `url` chain. ADR-0021's architectural floor of 1.85 remains the
# project's stated baseline; this `rust-version` reflects the actual
# Cargo.lock-driven requirement and is the value Cargo enforces at build.
rust-version = "1.88"
license-file = "LICENSE"
repository = "https://github.com/Cservin69/ABERP"
authors = ["Ervin Aben <ervin@aben.ch>"]
publish = false

[workspace.dependencies]
# Async runtime — ADR-0021 Part A, item 1.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "time", "sync", "signal"] }

# Error crates — ADR-0021 Part A, item 2.
# thiserror for library crates (crates/, modules/), anyhow for the binary boundary only.
thiserror = "1"
anyhow = "1"

# Logging / tracing — ADR-0021 Part A, item 3.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "registry"] }

# CLI — ADR-0021 Part A, item 4.
clap = { version = "4.6", features = ["derive"] }

# Serde + JSON — ADR-0021 Part A, item 7.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XML / SOAP — ADR-0021 Part A, item 8.
quick-xml = { version = "0.36", features = ["serialize"] }

# Cryptography — ADR-0021 Part A, item 9.
# sha2 used by audit-ledger entry_hash. zeroize joins here with PR-7-A
# (first NAV credential load). sha3 + aes added in PR-7-B-1: sha3 for
# the SHA3-512 requestSignature, aes for AES-128/ECB exchangeToken
# decryption (per ADR-0020 §2; ECB is protocol-imposed by NAV and the
# call-site comment in `crates/nav-transport/src/cipher.rs` names the
# constraint per ADR-0021 §A9 adversarial-review bullet 3).
sha2 = "0.10"
sha3 = "0.10"
aes = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }

# base64 — used by PR-7-B-1's per-invoice-index signature extension
# (SHA3-512(operation || base64(invoiceData)) per ADR-0009 §4) and by
# PR-7-B-2's tokenExchange response parser (NAV returns the
# exchangeToken as a base64-encoded AES-128/ECB ciphertext per ADR-0020
# §2). License: MIT/Apache-2.0 dual.
base64 = "0.22"

# HTTP client — ADR-0021 Part A, item 5. First use: nav-transport (PR-7-A).
# default-features = false strips reqwest's default native-tls; `rustls`
# is the chosen TLS backend per ADR-0021 Sub-decisions ("rustls everywhere").
#
# Feature-name note: ADR-0021 §A5 named "rustls-tls" — that was the feature
# name in reqwest 0.11/0.12. reqwest 0.13 renamed it to plain "rustls" and
# split out "rustls-native-certs" / "webpki-roots" as opt-in root sources.
# Even with neither root source feature enabled, reqwest 0.13's `rustls`
# feature still pulls webpki-roots transitively and uses them by default
# (caught by `crates/nav-transport/tests/trust_negation.rs`). To enforce
# pin-only trust we build the `rustls::ClientConfig` ourselves and hand it
# to reqwest via `use_preconfigured_tls` — see `crates/nav-transport/src/
# trust.rs`. The other three features track the §A5 pin text; PR-7-A only
# exercises rustls — gzip/stream/json are reachable by PR-7-B/7-C.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip", "stream", "json"] }

# Direct rustls — needed because reqwest 0.13 only exposes
# `use_preconfigured_tls` (no `tls_built_in_*` runtime knobs); building
# the entire `ClientConfig` ourselves is the only way to guarantee
# reqwest's defaults do not leak in (ADR-0020 §1 "OS trust store is not
# consulted"). Version line MUST match reqwest 0.13.x's transitive
# choice — Cargo.lock is authoritative (currently 0.23.x).
rustls = "0.23"
rustls-pemfile = "2"

# OS keychain binding — ADR-0021 Part A, item §A14 (PR-7-A amendment;
# closes fortnightly review finding F6). keyring 2.x ships the macOS
# Keychain and Windows Credential Manager backends unconditionally;
# the Linux backend is selected via the default feature ("secret-service"
# over D-Bus). Default features cover all three target platforms.
#
# Feature-name note: an earlier draft of this pin tried `apple-native` /
# `windows-native` — those are keyring 3.x names. v2 organizes platform
# selection differently; sticking with v2 defaults is the smaller-blast-
# radius choice for PR-7-A. A v3 bump can be its own ADR amendment.
keyring = "2"

# Embedded database driver, bundled per ADR-0021 Part A, item 10 (closes F1).
duckdb = { version = "1", features = ["bundled"] }

# Date / time — ADR-0021 Part A, item 11 (closes F2).
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde", "serde-well-known"] }

# Canonical CBOR encoding for the audit-ledger hash chain — ADR-0021 Part A,
# item 12 (closes F3). The encoder lives in ONE place inside aberp-audit-ledger.
ciborium = "0.2"

# ULID generation — ADR-0021 Part A, item 13 (closes F4), per ADR-0005.
ulid = "1"

[profile.release]
# Reproducible builds posture per ADR-0007 section "Supply chain".
# Strip is off so the binary hash recorded by ADR-0008 corresponds to a
# binary whose symbols are still inspectable post-mortem.
strip = false
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
