# ABERP workspace.
#
# Members:
#   crates/aberp-mes         - Stage 3 manufacturing adapter framework
#                              (ADR-0059, PR-224). Phase α skeleton — canonical
#                              event vocabulary + Adapter trait + AdapterRegistry
#                              + audit-ledger integration. No real hardware code;
#                              Phase β lands the first adapter (likely barcode).
#   crates/aberp-inventory   - Stage 3 Phase γ Inventory module v1 (S231 /
#                              PR-227, ADR-0061). Append-only stock_movements
#                              ledger + denormalised stock_qty cache on
#                              products + virtual low-stock view. Audit kind
#                              `mes.stock_movement_recorded`; ships
#                              `rebuild-stock-cache` binary as the recovery
#                              path when cache drifts from ledger.
#   crates/audit-ledger      - tamper-evident hash-chained audit ledger (ADR-0008).
#   crates/aberp-verify      - bundle verifier CLI (ADR-0035, PR-22) — re-verifies
#                              a per-invoice export bundle from its own bytes alone;
#                              separate-crate boundary per ADR-0035 §"Surfaced conflict 1"
#                              so the inspector-side tool does NOT inherit NAV /
#                              billing / DuckDB-write / Tauri transitive deps.
#   crates/invoice-pdf       - printed-invoice PDF renderer (ADR-0037 §1.a + ADR-0021
#                              "Print rendering path"). PR-44ε.1 / A152. lopdf-based
#                              single-page emitter with built-in Helvetica + WinAnsi
#                              encoding; the §169 / §172 printed-invoice contract
#                              consumer.
#   crates/mnb-rates         - MNB (Magyar Nemzeti Bank) exchange-rate fetcher
#                              (ADR-0037 §2). PR-44β. Hand-rolled SOAP over the
#                              MNB GetExchangeRates web service; same operator-
#                              twin posture as nav-transport (no SOAP-client
#                              dep; quick-xml only).
#   crates/nav-transport     - NAV TLS transport + credential loading (ADR-0009 §4,
#                              ADR-0020 §1-3, ADR-0021 §A14). PR-7-A.
#   crates/nav-xsd-validator - hand-rolled <InvoiceData> v3.0 invariant check
#                              (ADR-0022). PR-9-0.
#   modules/billing          - NAV invoice issuing module (ADR-0009).
#   apps/aberp               - the CLI binary that wires modules together.
#   apps/aberp-ui            - Tauri 2 + Svelte 5 operator UI shell (PR-9-2;
#                              ADR-0004, ADR-0007 §Tauri allow-list,
#                              ADR-0021 §Part B, ADR-0017).
#
# Dependency pins below come from ADR-0021 (pre-code consolidated baseline).
# Cargo.lock is the load-bearing artifact per ADR-0007 section "Supply chain";
# the version lines here are the floor, Cargo.lock is the exact pin.
#
# Only crates actually exercised by a landed PR appear here. Crates pinned
# by ADR-0021 but not yet used are added when the first PR that uses them
# lands. This matches CLAUDE.md rule 2 (simplicity first) without losing
# the pins, which remain authoritative in ADR-0021 Part A. (sha3 + aes
# joined the catalogue in PR-7-B-1; axum + axum-server + rcgen + tower
# joined in PR-9-1 — the wire-protocol PR; tauri + tauri-build joined in
# PR-9-2 — the operator-UI-shell PR.)

[workspace]
resolver = "2"
members = [
    "crates/audit-ledger",
    "crates/aberp-verify",
    "crates/aberp-quote-intake",
    "crates/aberp-mes",
    "crates/aberp-inventory",
    "crates/invoice-pdf",
    "crates/mnb-rates",
    "crates/nav-transport",
    "crates/nav-xsd-validator",
    "modules/billing",
    "apps/aberp",
    "apps/aberp-ui",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
# Effective MSRV floor: bumped from 1.85 to 1.88 when PR-3 pulled in
# `time` 0.3.47 (requires 1.88) and `icu_*` 2.2 (requires 1.86) via the
# `url` chain. ADR-0021's architectural floor of 1.85 remains the
# project's stated baseline; this `rust-version` reflects the actual
# Cargo.lock-driven requirement and is the value Cargo enforces at build.
rust-version = "1.88"
license-file = "LICENSE"
repository = "https://github.com/Cservin69/ABERP"
authors = ["Ervin Aben <ervin@aben.ch>"]
publish = false

[workspace.dependencies]
# Async runtime — ADR-0021 Part A, item 1.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "time", "sync", "signal"] }

# PR-209 / S213 — graceful shutdown via `CancellationToken`. The
# `tokio-util` crate is the canonical home for `CancellationToken`
# (tokio core deliberately keeps coordination primitives out of the
# main crate). Pulled in here because EVERY long-lived daemon (NAV
# poll, AP sync, quote-intake) selects on `token.cancelled()` so a
# Tauri window-close / Ctrl-C in `run_prod.sh` actually stops the
# backend instead of leaving zombie tokio tasks holding the port. The
# coordinator itself lives in `apps/aberp/src/shutdown.rs`; the
# workspace pin keeps the version line consistent across the three
# daemon-hosting crates that consume it.
#
# `rt` feature is the runtime-coordination half (CancellationToken +
# DropGuard). No native deps; MIT-licensed.
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }

# PR-60 / session-80 — `async-trait` is needed to declare `async fn`s on
# the dyn-compatible `MnbRatesProvider` trait. Without it, native
# `async fn` in trait methods would break object safety (the trait is
# consumed via `Box<dyn MnbRatesProvider>` from the serve-route's
# currency-discriminator). The macro de-sugars to `Pin<Box<dyn Future>>`
# return types, preserving dyn-compatibility while keeping the trait
# definition + impl sites readable.
async-trait = "0.1"

# Error crates — ADR-0021 Part A, item 2.
# thiserror for library crates (crates/, modules/), anyhow for the binary boundary only.
thiserror = "1"
anyhow = "1"

# Logging / tracing — ADR-0021 Part A, item 3.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "registry"] }

# CLI — ADR-0021 Part A, item 4.
clap = { version = "4.6", features = ["derive"] }

# Serde + JSON — ADR-0021 Part A, item 7.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XML / SOAP — ADR-0021 Part A, item 8.
quick-xml = { version = "0.36", features = ["serialize"] }

# Cryptography — ADR-0021 Part A, item 9.
# sha2 used by audit-ledger entry_hash. zeroize joins here with PR-7-A
# (first NAV credential load). sha3 + aes added in PR-7-B-1: sha3 for
# the SHA3-512 requestSignature, aes for AES-128/ECB exchangeToken
# decryption (per ADR-0020 §2; ECB is protocol-imposed by NAV and the
# call-site comment in `crates/nav-transport/src/cipher.rs` names the
# constraint per ADR-0021 §A9 adversarial-review bullet 3).
sha2 = "0.10"
sha3 = "0.10"
aes = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }

# base64 — used by PR-7-B-1's per-invoice-index signature extension
# (SHA3-512(operation || base64(invoiceData)) per ADR-0009 §4) and by
# PR-7-B-2's tokenExchange response parser (NAV returns the
# exchangeToken as a base64-encoded AES-128/ECB ciphertext per ADR-0020
# §2). License: MIT/Apache-2.0 dual.
base64 = "0.22"

# HTTP client — ADR-0021 Part A, item 5. First use: nav-transport (PR-7-A).
# default-features = false strips reqwest's default native-tls; `rustls`
# is the chosen TLS backend per ADR-0021 Sub-decisions ("rustls everywhere").
#
# Feature-name note: ADR-0021 §A5 named "rustls-tls" — that was the feature
# name in reqwest 0.11/0.12. reqwest 0.13 renamed it to plain "rustls" and
# split out "rustls-native-certs" / "webpki-roots" as opt-in root sources.
# Even with neither root source feature enabled, reqwest 0.13's `rustls`
# feature still pulls webpki-roots transitively and uses them by default
# (caught by `crates/nav-transport/tests/trust_negation.rs`). To enforce
# pin-only trust we build the `rustls::ClientConfig` ourselves and hand it
# to reqwest via `use_preconfigured_tls` — see `crates/nav-transport/src/
# trust.rs`. The other three features track the §A5 pin text; PR-7-A only
# exercises rustls — gzip/stream/json are reachable by PR-7-B/7-C.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip", "stream", "json"] }

# Direct rustls — needed because reqwest 0.13 only exposes
# `use_preconfigured_tls` (no `tls_built_in_*` runtime knobs); building
# the entire `ClientConfig` ourselves is the only way to guarantee
# reqwest's defaults do not leak in (ADR-0020 §1 "OS trust store is not
# consulted"). Version line MUST match reqwest 0.13.x's transitive
# choice — Cargo.lock is authoritative (currently 0.23.x).
rustls = "0.23"
rustls-pemfile = "2"

# OS keychain binding — ADR-0021 Part A, item §A14 (PR-7-A amendment;
# closes fortnightly review finding F6). keyring 2.x ships the macOS
# Keychain and Windows Credential Manager backends unconditionally;
# the Linux backend is selected via the default feature ("secret-service"
# over D-Bus). Default features cover all three target platforms.
#
# Feature-name note: an earlier draft of this pin tried `apple-native` /
# `windows-native` — those are keyring 3.x names. v2 organizes platform
# selection differently; sticking with v2 defaults is the smaller-blast-
# radius choice for PR-7-A. A v3 bump can be its own ADR amendment.
keyring = "2"

# Embedded database driver, bundled per ADR-0021 Part A, item 10 (closes F1).
duckdb = { version = "1", features = ["bundled"] }

# Date / time — ADR-0021 Part A, item 11 (closes F2).
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde", "serde-well-known"] }

# Decimal arithmetic for EUR→HUF conversion per ADR-0037 §1.c (PR-44γ —
# A135's deferred-to-arithmetic-consumer trigger fires here). First
# runtime consumer is `modules/billing`'s round-half-even HUF-equivalent
# helper (per A137 / C11). `rust_decimal` was already in `Cargo.lock`
# transitively via `duckdb`'s arrow chain; lifting it to the workspace
# pin is the standard ADR-0021 §A0 "pin on first direct use" posture.
rust_decimal = "1"

# Canonical CBOR encoding for the audit-ledger hash chain — ADR-0021 Part A,
# item 12 (closes F3). The encoder lives in ONE place inside aberp-audit-ledger.
ciborium = "0.2"

# ULID generation — ADR-0021 Part A, item 13 (closes F4), per ADR-0005.
ulid = "1"

# ── PR-9-1 additions — wire protocol per ADR-0021 §Part B ───────────
#
# HTTP server for the UI ↔ backend wire protocol. axum + axum-server
# (with tls_rustls::RustlsConfig) per ADR-0021 §A6. axum-server is
# pinned at 0.7 because its 0.7.x line is built against rustls 0.23
# (matching nav-transport's rustls pin — sharing the version line
# means rustls compiles once across the workspace).
#
# tower is reqwired by axum 0.7 as the middleware trait, pinned here
# explicitly so cargo-deny sees the same line we developed against.
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "query", "matched-path"] }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls"] }
tower = { version = "0.5", default-features = false }

# Self-signed cert generation for the loopback listener per ADR-0021
# §Sub-decisions "rcgen". Pinned at 0.13.x current minor.
#
# `pem` is a default feature in 0.13.x; gates `Certificate::pem()` and
# `KeyPair::serialize_pem()`. We use both for at-rest cert + key
# persistence under `~/.aberp/serve/<tenant>/`, so the feature MUST be
# enabled. `aws_lc_rs` is the other default we want explicitly named so
# `default-features = false` + explicit feature list is the
# blast-radius-controlled posture.
rcgen = { version = "0.13", default-features = false, features = ["aws_lc_rs", "pem"] }

# Cert/key parsing back from PEM on subsequent launches. rustls-pemfile
# already in the workspace; rustls types come from the existing rustls
# pin.

# Hex encoding for the SHA-256 fingerprint persisted next to the cert
# (loopback handshake verification per ADR-0007 §Transport). Workspace
# already has base64, but a hex fingerprint is what every "compare two
# certs by hash" code path in OpenSSL / browsers / Tauri's allow-list
# matches against; using hex here keeps that lineage.
hex = "0.4"

# ── PR-16 additions — per-invoice export bundle per ADR-0029 §8 ─────
#
# `.tar.zst` archive shape per ADR-0009 §8 (the per-invoice audit-
# evidence bundle NAV inspectors consume). Both crates are
# MIT/Apache-2.0 dual-licensed and pass the `deny.toml` allowlist;
# the `tar` crate is pure-Rust with no native deps; the `zstd` crate
# vendors libzstd via the `zstd-sys` chain (default features). Pin
# floors here; Cargo.lock is the exact pin per ADR-0007 §"Supply
# chain". No new feature flags off the defaults.
tar = "0.4"
zstd = "0.13"

# ── PR-17 additions — audit-ledger mirror file per ADR-0030 ─────────
#
# `fs2` provides cross-platform advisory file locks (flock on
# Linux/macOS, LockFileEx on Windows). The mirror writer holds an
# exclusive lock on `<db>.audit.log` for the duration of `sync_mirror`
# so two ABERP processes that both committed a DB entry serialize on
# the mirror append (ADR-0030 §6). MIT/Apache-2.0 dual-licensed; pure
# Rust on the public-API side; no native dependencies. Pin floor
# here; Cargo.lock is the exact pin per ADR-0007 §"Supply chain".
fs2 = "0.4"

# ── PR-44ε.1 additions — printed-invoice PDF renderer per ADR-0037
#    §1.a + ADR-0021 "Print rendering path" deferred row. A152.
#
# `lopdf` is the low-level Rust PDF document model — page tree, content
# streams, font dictionaries, all the PDF primitives. Default features
# include `chrono_time` + `nom_parser` + `rayon`; we don't need any of
# them at the printed-invoice render boundary (we don't parse PDFs, we
# don't date-stamp documents server-side, and the renderer is per-
# invoice synchronous). `default-features = false` keeps the dep tree
# minimal — the only transitive runtime add is `encoding_rs` (already
# pulled in transitively elsewhere) + `flate2` + `indexmap` + `weezl`
# + `rangemap` + `md-5` — all small, all MIT/Apache-2.0 dual.
#
# `pdf-extract` is the text-extraction inverse — consumed by the pin
# tests under `crates/invoice-pdf/tests/` to assert the rendered bytes
# carry every §1.a field's text content (ADR-0037 §4 invariant C7's
# print-render slice). Dev-dependency only — the production renderer
# does not parse the bytes it emits.
lopdf = { version = "0.34", default-features = false, features = ["nom_parser"] }
pdf-extract = "0.7"

# PR-176 — PNG decode for tenant-logo embedding on the printed-invoice
# PDF header (convention `~/.aberp/<tenant>/logo.png`). Pure-Rust PNG
# decoder, already transitively present via lopdf's deps; promoting to a
# direct workspace pin per ADR-0021 §A0 ("pin on first direct use"). The
# embed_image feature of lopdf was the alternative — rejected because it
# pulls the full `image` umbrella crate (TIFF / WebP / GIF / BMP / etc.)
# for a code path that only renders PNG. CLAUDE.md rule 13 — delete the
# part: a 4-MB transitive bloat to satisfy a 50-LoC RGB-decode is exactly
# the wrapper-around-one-consumed-field trap. Default features cover the
# decoder.
png = "0.17"

# ── PR-92 additions — SMTP email delivery per ADR-0047 ──────────────
#
# `lettre` is the Rust SMTP client. Default features pull in OpenSSL
# via `native-tls`; we explicitly disable defaults and re-enable ONLY
# the rustls path (`rustls-tls`) so the workspace stays on a single
# TLS backend (reqwest + axum-server + lettre all on rustls per
# ADR-0021 §A6 "rustls everywhere"). The `smtp-transport` feature is
# the SMTP I/O, `builder` is the typed MIME message builder, `tokio1-rustls-tls`
# wires the async runtime + rustls together.
#
# CRITICAL: there is NO `lettre`-side configuration knob that allows
# falling back to plaintext after a TLS failure — TLS is mandatory at
# the type level once a `Tls`-or-`StartTls` parameter is supplied
# (ADR-0047 §1). The closed-vocab `SmtpSecurity` enum in
# `apps/aberp/src/smtp_config.rs` ensures the operator-typed config
# can never produce a plaintext send path.
#
# License: MIT/Apache-2.0 dual. Pure-Rust (rustls feature) with no
# native deps once OpenSSL is excluded.
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls", "hostname"] }

# ── PR-9-2 additions — Tauri operator UI shell per ADR-0004 ─────────
#
# Tauri 2.x is the desktop runtime. `default-features = false` strips
# the bundled `wry` so a future cross-platform CI matrix can pick a
# different web renderer per OS without churning this pin; the `wry`
# feature is re-enabled in apps/aberp-ui's per-crate Cargo.toml so the
# default-platform behaviour is unchanged. No plugin features are
# pulled in at the workspace level — every plugin a future PR
# integrates lands its pin alongside the PR per CLAUDE.md rule 2.
#
# tauri-build is the build-script counterpart that parses
# tauri.conf.json + capabilities/*.json. Pinned at the same 2.x line.
tauri = { version = "2", default-features = false }
tauri-build = { version = "2", default-features = false }

[profile.release]
# Reproducible builds posture per ADR-0007 section "Supply chain".
# Strip is off so the binary hash recorded by ADR-0008 corresponds to a
# binary whose symbols are still inspectable post-mortem.
strip = false
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
