[package]
name = "aberp"
description = "ABERP binary — modular multi-tenant ERP backend."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

# PR-7-B-3 split: the binary keeps the operator-facing entry point in
# `main.rs`, but the orchestration modules live in `lib.rs` so the
# integration tests under `apps/aberp/tests/` can import them via the
# library face. Cargo does not expose `src/main.rs`'s sibling modules
# to integration tests; the lib + bin split is the standard workaround.
[lib]
name = "aberp"
path = "src/lib.rs"

[[bin]]
name = "aberp"
path = "src/main.rs"

[dependencies]
# Workspace siblings — production deps. `aberp-audit-ledger` is included
# WITHOUT the `test-support` feature; that feature lives only in dev-
# dependencies (below) so the production binary cannot reach
# `Actor::test_only`. Closes fortnightly review F15.
aberp-audit-ledger = { path = "../../crates/audit-ledger" }
aberp-billing = { path = "../../modules/billing" }
aberp-nav-transport = { path = "../../crates/nav-transport" }

# Binary boundary: anyhow per ADR-0021 Part A item 2.
anyhow = { workspace = true }

# CLI
clap = { workspace = true }

# JSON input + (re-used) XML serialization
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }

# Time, hashing
time = { workspace = true }
sha2 = { workspace = true }

# ULID for the per-CLI-invocation session_id passed to
# `Actor::from_local_cli`. PR-7-A first use in the binary.
ulid = { workspace = true }

# Storage — the binary owns the tenant DuckDB connection so it can drive
# one transaction across `aberp-billing` and `aberp-audit-ledger` per
# ADR-0008 §Storage. PR-6 close-out.
duckdb = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# PR-7-B-3 additions.
#
# `tokio` is needed because the NAV operations in
# `aberp-nav-transport::operations` are async (reqwest's `Client::send`
# is async). The binary builds a current-thread runtime per
# `submit-invoice` invocation rather than tagging `main` with
# `#[tokio::main]` so the existing sync `issue-invoice` path is
# unchanged (no runtime startup overhead for the no-NAV flow). Feature
# set mirrors what the workspace catalogue pins; `rt` would suffice for
# the current-thread flavour but the catalogue is `rt-multi-thread` and
# inheriting cleanly is cheaper than diverging.
tokio = { workspace = true }

# `keyring` is needed in production because the binary's
# `setup-nav-credentials` subcommand WRITES to the keychain — the
# library `aberp-nav-transport` only owns the READ path
# (`NavCredentials::load_from_keychain`). Re-using the same crate that
# the read path uses keeps the platform-backend behaviour identical.
keyring = { workspace = true }

[dev-dependencies]
# Integration tests need `Actor::test_only` (rollback_conformance.rs).
# Enabling the feature here keeps it OUT of the production [dependencies]
# above — production code paths cannot reach `Actor::test_only`. F15.
aberp-audit-ledger = { path = "../../crates/audit-ledger", features = ["test-support"] }
