[package]
name = "aberp"
description = "ABERP binary — modular multi-tenant ERP backend."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

# PR-7-B-3 split: the binary keeps the operator-facing entry point in
# `main.rs`, but the orchestration modules live in `lib.rs` so the
# integration tests under `apps/aberp/tests/` can import them via the
# library face. Cargo does not expose `src/main.rs`'s sibling modules
# to integration tests; the lib + bin split is the standard workaround.
[lib]
name = "aberp"
path = "src/lib.rs"

[[bin]]
name = "aberp"
path = "src/main.rs"

[dependencies]
# Workspace siblings — production deps. `aberp-audit-ledger` is included
# WITHOUT the `test-support` feature; that feature lives only in dev-
# dependencies (below) so the production binary cannot reach
# `Actor::test_only`. Closes fortnightly review F15.
aberp-audit-ledger = { path = "../../crates/audit-ledger" }
aberp-billing = { path = "../../modules/billing" }
aberp-nav-transport = { path = "../../crates/nav-transport" }
# PR-9-0: runtime <InvoiceData> v3.0 invariant check per ADR-0022. Three
# call sites — issue_invoice::run, submit_invoice::run, retry_submission::run.
aberp-nav-xsd-validator = { path = "../../crates/nav-xsd-validator" }

# Binary boundary: anyhow per ADR-0021 Part A item 2.
anyhow = { workspace = true }

# CLI
clap = { workspace = true }

# JSON input + (re-used) XML serialization
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }

# Time, hashing
time = { workspace = true }
sha2 = { workspace = true }

# ULID for the per-CLI-invocation session_id passed to
# `Actor::from_local_cli`. PR-7-A first use in the binary.
ulid = { workspace = true }

# Storage — the binary owns the tenant DuckDB connection so it can drive
# one transaction across `aberp-billing` and `aberp-audit-ledger` per
# ADR-0008 §Storage. PR-6 close-out.
duckdb = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# PR-7-B-3 additions.
#
# `tokio` is needed because the NAV operations in
# `aberp-nav-transport::operations` are async (reqwest's `Client::send`
# is async). The binary builds a current-thread runtime per
# `submit-invoice` invocation rather than tagging `main` with
# `#[tokio::main]` so the existing sync `issue-invoice` path is
# unchanged (no runtime startup overhead for the no-NAV flow). Feature
# set mirrors what the workspace catalogue pins; `rt` would suffice for
# the current-thread flavour but the catalogue is `rt-multi-thread` and
# inheriting cleanly is cheaper than diverging.
tokio = { workspace = true }

# `keyring` is needed in production because the binary's
# `setup-nav-credentials` subcommand WRITES to the keychain — the
# library `aberp-nav-transport` only owns the READ path
# (`NavCredentials::load_from_keychain`). Re-using the same crate that
# the read path uses keeps the platform-backend behaviour identical.
keyring = { workspace = true }

# PR-9-1 additions — wire protocol per ADR-0021 §Part B. The binary
# owns the loopback HTTPS server because the rest of the orchestration
# (DuckDB connection lifecycle, audit ledger, billing) is already on
# the binary side. A separate crate for the server would force the
# same coupling at module-boundary cost; per CLAUDE.md rule 2 we keep
# the simpler shape until a real second client wants the same routes.
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
hex = { workspace = true }

# PR-16 additions — per-invoice export bundle per ADR-0029. The
# `export-invoice-bundle` orchestration lives in the binary because
# it consumes the existing audit-ledger crate's read surface
# (`Ledger::entries` + `Ledger::verify_chain`) and the existing
# per-payload audit_payloads structs. No new module-boundary surface
# is introduced — the bundle reader is read-only orchestration over
# the binary-side crates already in scope, per CLAUDE.md rule 3.
# base64 is needed to encode the entry payload bytes into the
# chain.jsonl manifest entries (per ADR-0029 §3's chain.jsonl line
# shape); workspace already pins base64 from PR-7-B-1.
base64 = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
# Integration tests need `Actor::test_only` (rollback_conformance.rs).
# Enabling the feature here keeps it OUT of the production [dependencies]
# above — production code paths cannot reach `Actor::test_only`. F15.
aberp-audit-ledger = { path = "../../crates/audit-ledger", features = ["test-support"] }

# PR-22 / ADR-0035 — the end-to-end writer-verifier round-trip test
# at `tests/verify_bundle_round_trip.rs` exercises the real
# `export_invoice_bundle::run` producer against `aberp_verify::
# verify_bundle`'s consumer. Dev-dep only — the production aberp
# binary does NOT depend on aberp-verify (the verifier is the
# inspector-side artifact per ADR-0035 §"Surfaced conflict 1"
# Reading A and lives outside the operator binary's trust
# boundary).
aberp-verify = { path = "../../crates/aberp-verify" }
